--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,47 +2,24 @@ plugins {
     id 'com.android.application'
     id 'kotlin-android'
     id 'kotlin-kapt'
-//    id 'plugin.allopen'
-     id 'kotlin-android-extensions'
-//    id 'PluginDependencies.NAVIGATION'
 }
 
 android {
-   compileSdkVersion 31
-    buildToolsVersion '30.0.3'
-//    compileSdkVersion(BuildConfiguration.compileSdkVersion)
+    compileSdkVersion 31
+    buildToolsVersion "30.0.3"
 
-    /*buildFeatures {
-        dataBinding true
-       // viewBinding true
-    }*/
-   /* dataBinding {
-        enabled = true
-    }*/
-    buildFeatures {
-        dataBinding true
-    }
     defaultConfig {
         applicationId "com.example.tanamgroceryapp"
         minSdkVersion 22
-        targetSdkVersion 31
-
+        targetSdkVersion 30
         versionCode 1
         versionName "1.0"
-       /* applicationId = BuildConfiguration.applicationId
-        minSdkVersion(BuildConfiguration.minSdkVersion)
-        targetSdkVersion(BuildConfiguration.targetSdkVersion)
-
-        versionCode = BuildConfiguration.versionCode
-        versionName = BuildConfiguration.versionName
-*/
-        //vectorDrawables.useSupportLibrary = true
-
-    //    setProperty("archivesBaseName", "$applicationId-app-$versionName")
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
-
+    buildFeatures {
+        dataBinding true
+    }
     buildTypes {
         release {
             minifyEnabled false
@@ -56,41 +33,55 @@ android {
     kotlinOptions {
         jvmTarget = '1.8'
     }
+
 }
 
 dependencies {
 
-    implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
+   implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
+   // implementation 'org.jetbrains.kotlin:kotlin-stdlib:1.6.0-M1'
 
+    implementation 'androidx.appcompat:appcompat:1.4.0'
+    implementation 'androidx.core:core-ktx:1.7.0'
     implementation 'androidx.appcompat:appcompat:1.4.0'
     implementation 'com.google.android.material:material:1.4.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.2'
     implementation 'androidx.navigation:navigation-fragment-ktx:2.3.5'
     implementation 'androidx.navigation:navigation-ui-ktx:2.3.5'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
+
     implementation 'androidx.cardview:cardview:1.0.0'
     implementation 'androidx.recyclerview:recyclerview:1.2.1'
 
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+
     implementation 'com.google.code.gson:gson:2.8.9'
     implementation 'com.intuit.sdp:sdp-android:1.0.6'
 
-    implementation 'org.imaginativeworld.whynotimagecarousel:whynotimagecarousel:2.0.5'
+    implementation 'com.github.bumptech.glide:glide:4.12.0'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.12.0'
 
-    implementation 'androidx.viewpager2:viewpager2:1.0.0'
+    implementation'com.daimajia.androidanimations:library:2.3@aar'
+
+  //  implementation 'com.github.denzcoskun:ImageSlideshow:0.1.0'
+
+
+    implementation 'androidx.viewpager:viewpager:1.0.0'
+    implementation 'androidx.viewpager2:viewpager2:1.1.0-beta01'
+    implementation 'com.github.JakeWharton:ViewPagerIndicator:2.4.1'
+
+    implementation 'com.google.android.material:material:1.6.0-alpha01'
 
     implementation 'com.makeramen:roundedimageview:2.3.0'
 
-
-    implementation 'com.github.JakeWharton:ViewPagerIndicator:2.4.1'
-
-    implementation 'com.github.bumptech.glide:glide:4.12.0'
+    //implementation 'com.diffplug.spotless:spotless-plugin-gradle:4.3.0'
 
 
-    implementation 'com.github.acefalobi:android-stepper:0.3.0'
 
-    implementation 'com.diffplug.spotless:spotless-plugin-gradle:4.3.0'
+   // implementation 'com.github.acefalobi:android-stepper:0.3.0'
+
+
 
 
 }
