--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,6 +2,7 @@ plugins {
     id 'com.android.application'
     id 'kotlin-android'
     id 'kotlin-kapt'
+    id 'kotlin-android-extensions'
 }
 
 android {
@@ -25,6 +26,9 @@ android {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
+    }
+    viewBinding{
+        enabled=true
     }
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
@@ -64,24 +68,22 @@ dependencies {
 
     implementation'com.daimajia.androidanimations:library:2.3@aar'
 
-  //  implementation 'com.github.denzcoskun:ImageSlideshow:0.1.0'
 
 
     implementation 'androidx.viewpager:viewpager:1.0.0'
     implementation 'androidx.viewpager2:viewpager2:1.1.0-beta01'
     implementation 'com.github.JakeWharton:ViewPagerIndicator:2.4.1'
 
-    implementation 'com.google.android.material:material:1.6.0-alpha01'
 
     implementation 'com.makeramen:roundedimageview:2.3.0'
 
-    //implementation 'com.diffplug.spotless:spotless-plugin-gradle:4.3.0'
 
 
 
-   // implementation 'com.github.acefalobi:android-stepper:0.3.0'
-
-
+    // stepview
+    implementation 'com.params.stepview:stepview:1.0.2'
+//    implementation 'com.shuhart.stepview:stepview:1.5.1'
+    //implementation 'com.github.acefalobi:android-stepper:0.3.0'
 
 
 }
