--- a/app/build.gradle
+++ b/app/build.gradle
@@ -82,7 +82,9 @@ dependencies {
 
     // stepview
     implementation 'com.params.stepview:stepview:1.0.2'
-//    implementation 'com.shuhart.stepview:stepview:1.5.1'
+
+
+   implementation 'com.shuhart.stepview:stepview:1.5.1'
     //implementation 'com.github.acefalobi:android-stepper:0.3.0'
 
 
